# ComfyUI-API-DockerCPU

./: .comfyignore  .gitignore  README.md  __init__.py  cpu-requirements.txt  global_inputs.yaml  global_outputs.yaml  global_parameters.yaml  import_schemas.py  load_env.sh  pyproject.toml  requirements.txt  supported_models.yaml
API/: __init__.py
common/: __init__.py  amd_tools.py  config_loader.py  image_utils.py  input_handlers.py  local_llm.py  logger.py  output_handlers.py  parameter_handlers.py  schema_utils.py  text_saver.py  type_mapping.py  utils.py  zip_utils.py
example_workflows/: BFL-Flux2-Klein-9b-Restore_Old_Photo-API.json  BFL-Flux2-Klein-9b-Restore_Old_Photo.json  Google-Nano-Banana-Pro-Restore_Old_Photo-API.json  Google-Nano-Banana-Restore_Old_Photo.json  Load Image with Metadata OUTPUTS.json  Load-Image-API.json  Local LLM Workflow.json
plan/: 00_index.md  00_overview.md  01_is_type.md  02_get_input_type_from_config.md  03_parameter_ordering_functions.md  04_get_output_name_with_alias.md  05_get_model_config_override.md  06_convert_to_comfyui_input_type.md  07_handle_image_output.md  08_handle_audio_output.md  09_handle_array_inputs.md  10_remove_falsey_optional_inputs.md  11_convert_input_images_to_base64.md  12_image_to_base64.md  13_audio_to_base64.md  14_base64_to_tensor.md  15_log_input.md  16_dry_run_output.md  17_debug_schema_conversion.md  18_get_standard_parameters.md  19_process_output.md  20_extract_max_items_from_description.md  21_get_input_name_with_alias.md  22_get_schema_from_json.md  23_get_array_config.md  24_get_max_images_and_array_input_mapping.md  25_combine_split_image_inputs.md  26_base64_encode.md  27_format_value_for_log.md  29_pil_image_to_tensor.md  (+55 more)
(+38 files in other folders)
